--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
             <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
