--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <section class="conteudo-principal">
+        <div class="conteudo">
         <h2 class="titulo-principal">Minhas metas para este ano<span>_</span></h2>
         <div class="botoes">
             <button class="botao ativo">Emagrecer</button>
@@ -39,6 +40,7 @@
             <div class="contador"></div>
         </div>
     </div>
+</div>
     <script src="main.js"></script>
 </body>
 </html>
